# ai-qa

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yaml  pyproject.toml
backend/: .sample.env  main.py  qa.py  scrap.py
backend/settings/: base.py
docker/: backend.dev.Dockerfile
