[tool.poetry]
name = "ai-q&a"
version = "1.5.0"
description = ""
authors = ["a.janas <a.janas@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
beautifulsoup4 = "^4.12.2"
langchain = "^0.0.250"
python-dotenv = "^1.0.0"
openai = "^0.27.8"
tiktoken = "^0.4.0"
qdrant-client = "1.3.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.0.0"
black = "^23.7.0"
ruff = "^0.0.282"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude-extend = '''
/venv
/.venv
/__pycache__
/.mypy_cache
/.pytest_cache
'''

[tool.ruff]
line-length = 120
select = ["E", "F", "UP", "I"]
ignore = ["E501"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "migrations",
    "__pypackages__",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.isort]
section-order = ["future", "fastapi", "standard-library", "third-party",  "first-party", "local-folder"]

[tool.ruff.isort.sections]
fastapi = ["fastapi"]